# tmdb-api-try

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.c  lib.h  main.c
source/movie_genre/: CMakeLists.txt  init.c  json.c  movie_genre.c  movie_genre.h
source/movie_result/: CMakeLists.txt  json.c  movie_result.h  new.c
source/sds/: CMakeLists.txt
source/search_movie_result/: CMakeLists.txt  json.c  new.c  search_movie_result.h
source/stb_ds/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: tmdb-api-try_test.c
